[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/World/Trampoline/Trampoline.gd" type="Script" id=1]
[ext_resource path="res://Game/World/Trampoline/wobble2.wav" type="AudioStream" id=2]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, 0 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 20, 2, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 2 )
random_pitch = 1.05

[node name="Trampoline" type="Node2D" groups=[
"trampoline",
]]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -100, -100, 200, 200 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Line2D2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 0.152941, 0.152941, 0.266667, 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.984314, 0.960784, 0.937255, 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 0.8
randomness = 1.0
process_material = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
volume_db = 10.0
attenuation = 0.267943
bus = "sound"
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
